fixing dropdown btn vertical alignment and other fixes

--- a/base_theme/static/base_theme/scss/scss/base/_defaults.scss
+++ b/base_theme/static/base_theme/scss/scss/base/_defaults.scss
@@ -177,9 +177,11 @@ h6 {
 a {
 	font-family: $roma;
 	color: $red;
+	outline: 0;
 	&:hover, &:focus {
 		text-decoration: none;
 		color: #df524e;
+		outline: 0;
 	}
 }
 
