--- a/base_theme/static/base_theme/scss/scss/modules/navigation/_main_nav_dropdown.scss
+++ b/base_theme/static/base_theme/scss/scss/modules/navigation/_main_nav_dropdown.scss
@@ -38,6 +38,7 @@
             color: #fff;
             padding-top: 4px;
             padding-bottom: 4px;
+            vertical-align: inherit;
             &:hover,
             &:focus {
                 background: $red;
